src/objects/AcctSeed__Recurring_Journal_Entry__c.object
<CustomObject>
    <description>Captures information related to recurring journal entry records. A journal entry is a template for creating journal entry records on a periodic basis.</description>
    <fields>
        <fullName>AcctSeed__Exclude_From_Automation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Leave this checkbox unchecked so Journal Entries are created from this Recurring Journal Entry when you have automation set up. Check it to exclude Journal Entries from being automatically created.</description>
        <inlineHelpText>Leave this checkbox unchecked so Journal Entries are created from this Recurring Journal Entry when you have automation set up. Check it to exclude Journal Entries from being automatically created.</inlineHelpText>
        <label>Exclude From Automation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Journal_Entry_Frequency__c</fullName>
        <inlineHelpText>Bi-weekly, Monthly, Quarterly, Semi-Annual, Annual</inlineHelpText>
        <label>Journal Entry Frequency</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Bi-weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                    <default>true</default>
                    <label>Monthly</label>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semi-annual</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Last_Journal_Entry_Date__c</fullName>
        <inlineHelpText>The last date a journal entry was created.</inlineHelpText>
        <label>Last Journal Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Ledger__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Denotes the associated ledger.</inlineHelpText>
        <label>Ledger</label>
        <referenceTo>AcctSeed__Ledger__c</referenceTo>
        <relationshipLabel>Recurring Journal Entries</relationshipLabel>
        <relationshipName>Recurring_Journal_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Line_Count__c</fullName>
        <inlineHelpText>Number of recurring journal entry lines associated with this record.</inlineHelpText>
        <label>Line Count</label>
        <summaryForeignKey>AcctSeed__Recurring_Journal_Entry_Line__c.AcctSeed__Recurring_Journal_Entry__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Next_Journal_Entry_Create__c</fullName>
        <formula>IF(AcctSeed__Next_Journal_Entry_Date__c - TODAY() &lt;=7, &quot;Next 7 Days&quot;, 
IF(AcctSeed__Next_Journal_Entry_Date__c - TODAY() &lt;=30, &quot;8 To 30 Days&quot;, 
IF(AcctSeed__Next_Journal_Entry_Date__c - TODAY() &lt;=60, &quot;31 To 60 Days&quot;, 
IF(AcctSeed__Next_Journal_Entry_Date__c - TODAY() &lt;=90, &quot;61 To 90 Days&quot;, 
&quot;Beyond 90 Days&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Time frame to create next journal entry.</inlineHelpText>
        <label>Next Journal Entry Create</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Next_Journal_Entry_Date__c</fullName>
        <inlineHelpText>The next date a journal entry should be created.</inlineHelpText>
        <label>Next Journal Entry Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Out_of_Balance__c</fullName>
        <formula>AcctSeed__Total_Debits__c  -  AcctSeed__Total_Credits__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Debits - Total Credits. Shows the total amount a Journal Entry is Out of Balance.</inlineHelpText>
        <label>Out of Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Status__c</fullName>
        <inlineHelpText>Determines if the recurring journal entry should still be used.</inlineHelpText>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Total_Credits__c</fullName>
        <inlineHelpText>Total Credits from Recurring Journal entry Lines.</inlineHelpText>
        <label>Total Credits</label>
        <summarizedField>AcctSeed__Recurring_Journal_Entry_Line__c.AcctSeed__Credit__c</summarizedField>
        <summaryForeignKey>AcctSeed__Recurring_Journal_Entry_Line__c.AcctSeed__Recurring_Journal_Entry__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Total_Debits__c</fullName>
        <inlineHelpText>Total Debits from Recurring Journal entry Lines.</inlineHelpText>
        <label>Total Debits</label>
        <summarizedField>AcctSeed__Recurring_Journal_Entry_Line__c.AcctSeed__Debit__c</summarizedField>
        <summaryForeignKey>AcctSeed__Recurring_Journal_Entry_Line__c.AcctSeed__Recurring_Journal_Entry__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Recurring Journal Entry</label>
    <listViews>
        <fullName>AcctSeed__All</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Journal_Entry_Frequency__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Last_Journal_Entry_Date__c</columns>
        <columns>AcctSeed__Next_Journal_Entry_Date__c</columns>
        <columns>AcctSeed__Total_Debits__c</columns>
        <columns>AcctSeed__Total_Credits__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__All_Active</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Journal_Entry_Frequency__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Last_Journal_Entry_Date__c</columns>
        <columns>AcctSeed__Next_Journal_Entry_Date__c</columns>
        <columns>AcctSeed__Total_Debits__c</columns>
        <columns>AcctSeed__Total_Credits__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All Active</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__All_Inactive</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Journal_Entry_Frequency__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Last_Journal_Entry_Date__c</columns>
        <columns>AcctSeed__Next_Journal_Entry_Date__c</columns>
        <columns>AcctSeed__Total_Debits__c</columns>
        <columns>AcctSeed__Total_Credits__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Status__c</field>
            <operation>equals</operation>
            <value>Inactive</value>
        </filters>
        <label>All Inactive</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Automation</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Journal_Entry_Frequency__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Last_Journal_Entry_Date__c</columns>
        <columns>AcctSeed__Next_Journal_Entry_Date__c</columns>
        <columns>AcctSeed__Total_Debits__c</columns>
        <columns>AcctSeed__Total_Credits__c</columns>
        <columns>AcctSeed__Exclude_From_Automation__c</columns>
        <columns>AcctSeed__Ledger__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Exclude_From_Automation__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Automation</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Automation_Excluded</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Journal_Entry_Frequency__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Last_Journal_Entry_Date__c</columns>
        <columns>AcctSeed__Next_Journal_Entry_Date__c</columns>
        <columns>AcctSeed__Total_Debits__c</columns>
        <columns>AcctSeed__Total_Credits__c</columns>
        <columns>AcctSeed__Exclude_From_Automation__c</columns>
        <columns>AcctSeed__Ledger__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Exclude_From_Automation__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Automation Excluded</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Create_in_Next_7_Days</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Journal_Entry_Frequency__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Last_Journal_Entry_Date__c</columns>
        <columns>AcctSeed__Next_Journal_Entry_Date__c</columns>
        <columns>AcctSeed__Total_Debits__c</columns>
        <columns>AcctSeed__Total_Credits__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Next_Journal_Entry_Date__c</field>
            <operation>equals</operation>
            <value>NEXT_N_DAYS:7</value>
        </filters>
        <label>Create in Next 7 Days</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__In_Balance</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Journal_Entry_Frequency__c</columns>
        <columns>AcctSeed__Out_of_Balance__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Last_Journal_Entry_Date__c</columns>
        <columns>AcctSeed__Next_Journal_Entry_Date__c</columns>
        <columns>AcctSeed__Total_Debits__c</columns>
        <columns>AcctSeed__Total_Credits__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Out_of_Balance__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>In Balance</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Out_of_Balance</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Journal_Entry_Frequency__c</columns>
        <columns>AcctSeed__Out_of_Balance__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Last_Journal_Entry_Date__c</columns>
        <columns>AcctSeed__Next_Journal_Entry_Date__c</columns>
        <columns>AcctSeed__Total_Debits__c</columns>
        <columns>AcctSeed__Total_Credits__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Out_of_Balance__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <label>Out of Balance</label>
    </listViews>
    <nameField>
        <label>Recurring Journal Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recurring Journal Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>